Fix invisible warnings bug

--- a/weather/weather.css
+++ b/weather/weather.css
@@ -73,7 +73,7 @@ body {
 	margin: 0;
 	list-style: none;
 	padding: 0;
-    font-size: 15px;
+    font-size: 16px;
 }
 
 #infos {
@@ -193,6 +193,10 @@ footer a {
 
 #warnings div:last-child {
     margin-bottom: 0;
+}
+
+#warnings.visible {
+    display: block !important;
 }
 
 h3 {
